# stella

./: README  addfheader.cl  addgrat.cl  addutc.cl  array.cl  bigcorr.cl  binni000.cl  binning.cl  binning_blue.cl  binning_old.cl  binning_red.cl  calcmean.cl  calcmedian.cl  calcsnr.cl  cesall.cl  changebacknames.cl  changecalnames.cl  changenames.cl  changenames_ACES.cl  changenames_ALFOSC.cl  changenames_CES.cl  changenames_FEROS.cl  changenames_GTC.cl  changenames_RAVE.cl  changenames_SEDM.cl  changenames_UVES.cl  changenames_UVES_dir.cl  checkhkeyw.cl  cntlines.cl  comparecals.cl  contsetfunc.cl  countorders.cl  countpix.cl  dectodechms.cl  divapsbymax.cl  divapsbymean.cl  dorvcorlist.cl  empty.cl  emptylist.cl  findgoodcals.cl  (+97 more)
badpixelmasks/: badpix_ACES_1024x4108_1.mask  badpix_ACES_2048x4096.mask  badpix_ALFOSC_1051x1026.mask  badpix_ALFOSC_2102x2052.mask  badpix_ALFOSC_2102x2052_errortest.mask  badpix_CES_281x4096.mask  badpix_NTT.mask  badpix_SES_1074x1026.mask  badpix_SES_1074x2052.mask  badpix_SES_2148x2052_2x1.mask  badpix_SES_2198x2052.mask  badpix_UVES_blue_1074x1500.mask  badpix_UVES_blue_2148x1500.mask  badpix_UVES_blue_2148x3000.mask  badpix_UVES_red_l_1074x2048.mask  badpix_UVES_red_l_2148x2048.mask  badpix_UVES_red_l_2148x4096.mask  badpix_UVES_red_r_1074x2048.mask  badpix_UVES_red_r_2148x2048.mask  badpix_UVES_red_r_2148x4096.mask  badpix_UVES_red_r_564_2148x4096.mask
cpp/: README  THIS_VERSION  dirs.list  make_all  make_clean  modules.list
cpp/SEDM-IFU/: reconstruct_lenslet_images  reduce_objects  reduce_std  reduce_xe  reduce_xe_ne_hg
cpp/blitz-0.9/: blitz-uninstalled.pc  config.status  libtool
cpp/cfitsio/: config.status
cpp/cmpfit-1.2/: testmpfit
cpp/gsl-1.16/: config.status  gsl-histogram  gsl-randist  libtool
cpp/mathgl-2.2/: AUTHORS  CMakeCache.txt  CMakeLists.txt  ChangeLog.txt  INSTALL  README  cmake_install.cmake  install_manifest.txt  todo.txt
cpp/mathgl-2.2/json/: Backend.cpp  Backend.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  cmake_install.cmake  index.html  main.js
cpp/mathgl-2.2/utils/: CMakeLists.txt  cmake_install.cmake  mgl.cgi  mglcgi.cpp  mglconv  mglconv.cpp  mglview.cpp
cpp/mathgl-2.2/widgets/: CMakeLists.txt  cmake_install.cmake  fltk.cpp  glut.cpp  qt.cpp  wx.cpp
database/: aprefFlat  ecrefThar_identified
linelists/: index.html  refWave_SEDMIFU_s_wlen_pix_255long.fits  refWave_s_SEDM_250long_4wide_ap840_x1020_y1065.fits  tharne_3530-3660.ps  tharne_3580-3740.ps  tharne_3640-3790.ps  tharne_3700-3850.ps  tharne_3760-3910.ps  tharne_3830-3980.ps  tharne_3890-4050.ps  tharne_3960-4120.ps  tharne_4035-4200.ps  tharne_4110-4280.ps  tharne_4185-4360.ps  tharne_4260-4440.ps  tharne_4345-4530.ps  tharne_4430-4620.ps  tharne_4525-4715.ps  tharne_4620-4810.ps  tharne_4720-4915.ps  tharne_4820-5020.ps  tharne_4930-5130.ps  tharne_5040-5250.ps  tharne_5160-5370.ps  tharne_5280-5500.ps  tharne_5410-5630.ps  tharne_5540-5770.ps  tharne_5685-5920.ps  tharne_5840-6070.ps  tharne_5990-6240.ps  tharne_6160-6410.ps  tharne_6340-6590.ps  tharne_6520-6790.ps  tharne_6720-6990.ps  tharne_6930-7210.ps  tharne_7150-7440.ps  tharne_7390-7690.ps  tharne_7650-7950.ps  tharne_7920-8240.ps  tharne_8220-8540.ps  (+2 more)
parameterfiles/: parameterfile.prop  parameterfile_ACES.prop  parameterfile_ALFOSC_4grism7_1051x1026.prop  parameterfile_ALFOSC_6grism9_2102x2052.prop  parameterfile_ALFOSC_6grism9_2102x2052_errortest.prop  parameterfile_CES_6150_281x4096.prop  parameterfile_FEROS_2148x4096.prop  parameterfile_FEROS_2148x4096_6orders.prop  parameterfile_GTC.prop  parameterfile_McDonald.prop  parameterfile_NTT.prop  parameterfile_RAVE.prop  parameterfile_SES_1074x1026.prop  parameterfile_SES_1074x2052.prop  parameterfile_SES_2148x2052.prop  parameterfile_SES_2148x2052_1.prop  parameterfile_SES_2148x2052_2.prop  parameterfile_SES_2148x2052_test.prop  parameterfile_SES_2148x2052_x.prop  parameterfile_SES_2198x2052.prop  parameterfile_SES_2198x2052_errortest.prop  parameterfile_SES_temp.prop  parameterfile_SOFIN.prop  parameterfile_SOFIN_old.prop  parameterfile_UVES_blue.prop  parameterfile_UVES_blue_346_1074x1500.prop  parameterfile_UVES_blue_346_2148x3000.prop  parameterfile_UVES_blue_390_1074x1500.prop  parameterfile_UVES_blue_390_2148x1500.prop  parameterfile_UVES_blue_390_2148x3000.prop  parameterfile_UVES_blue_437_1074x1500.prop  parameterfile_UVES_blue_437_2148x3000.prop  parameterfile_UVES_red_l_564_2148x4096.prop  parameterfile_UVES_red_l_580_1074x2048.prop  parameterfile_UVES_red_l_580_2148x4096.prop  parameterfile_UVES_red_l_580_2148x4096_old.prop  parameterfile_UVES_red_l_860_1074x2048.prop  parameterfile_UVES_red_l_860_2148x4096.prop  parameterfile_UVES_red_r_564_2148x4096.prop  parameterfile_UVES_red_r_580_1074x2048.prop  (+12 more)
referenceFiles/: refCalib_ACES1.fits  refCalib_ALFOSC_6grism9_2102x2052.fits  refCalib_FEROS_2148x4096.fits  refCalib_FEROS_6orders.fits  refCalib_SES_2148x2052_104.fits  refCalib_SES_2148x2052_104_new.fits  refCalib_SES_2148x2052_87.fits  refCalib_UVES_346_1024x1360.fits  refCalib_UVES_437_1024x1360.fits  refCalib_UVES_580_l_1074x2048.fits  refCalib_UVES_580_r_1074x2048.fits  refCalib_UVES_860_l_1074x2048.fits  refCalib_UVES_red_l_860_1931x12.fits  refCalib_UVES_red_r_860_1931x20.fits  refCalib_UVES_red_r_860_2048x1931_32.fits  refThAr_346_2148x3000.fits  refThAr_390_1024x1500.fits  refThAr_390_1024x1500_fit3.fits  refThAr_390_2048x3000.fits  refThAr_437_2048x2401_old.fits  refThAr_437_2148x3000.fits  refThAr_437_2148x3000_old.fits  refThAr_564_l_2148x4096.fits  refThAr_564_r_2148x4096.fits  refThAr_580_l_2148x4096.fits  refThAr_580_r_2148x4096.fits  refThAr_860_l_2048x3881.fits  refThAr_860_l_2148x4096.fits  refThAr_860_r_2048x3881.fits  refThAr_860_r_2148x4096.fits  refThAr_CES_6150_282x4096.fits  refThAr_SES_1074x1026.fits  refThAr_SES_1074x2052.fits  refThAr_SES_2148x2052.fits  refThAr_SES_2198x2052.fits  refThAr_UCLES_580.fits  refThAr_UVES_390_1024x1500.fits  refThAr_UVES_437_31x2800.fits  refThAr_UVES_860_l_2048x4006.fits  refThAr_UVES_860_l_2048x4096.fits
referenceFiles/database/: aplast  (+110 more)
(+1693 files in other folders)
